# rusty_token

./: .gitignore  Cargo.toml  README.md
.github/workflows/: compile.yml
data/: common-headers.txt  common-payloads.txt  jwt-common.txt
docs/: _config.yml  api.md  index.md  installation.md  setup_docs.py  usage.md
src/: constants.rs  error.rs  main.rs
src/helpers/: mod.rs  print_output.rs
src/jwt_core/: jwt_analyzer.rs  mod.rs
src/jwt_exploiter/: forging_methods.rs  generate_exploits.rs  mod.rs  structs.rs
src/types/: claims.rs  exploit.rs  mod.rs  output.rs  vulnerability.rs
