[package]
name = "rusty_token"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = "2.33"
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
rayon = "1.5"
futures = "0.3"
chrono = "0.4"
colored = "2.0"

hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
rsa = "0.9"
jwt = "0.16"
signature = "2.1"